--- a/bin/TuboWariProjectionDebug.app/Contents/Info.plist
+++ b/bin/TuboWariProjectionDebug.app/Contents/Info.plist
@@ -25,9 +25,9 @@
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>10M2262</string>
+	<string>12C60</string>
 	<key>DTSDKName</key>
-	<string>macosx10.6</string>
+	<string></string>
 	<key>DTXcode</key>
 	<string>0451</string>
 	<key>DTXcodeBuild</key>
